2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-detach): Don't handle the namespace case.
	* Source/NSXMLElement.m (-removeNamespaceForPrefix:): Implement.
	* Tests/base/NSXMLNode/basic.m: Move tests from here ...
	* Tests/base/NSXMLElement/basic.m: ... to here.

2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLElement.m: Correct used namespace field.
	* Source/NSXMLNode.m: Implement special handling for namespace nodes.
	* Tests/base/NSXMLNode/basic.m: Correct method name for namespace node.

2012-03-11  Richard Frith-Macdonald & Fred Kiefer

	* Source/NSXMLNamespace.m:
	* Source/GNUmakefile:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLNode.m:
	Revert most of my last change in favour of Fred's changes.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLNamespace.m: New class for namespaces
	* Source/GNUmakefile: Build with new class
	* Source/NSXMLDocument.m:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLDTD.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLDTDNode.m:
	* Source/NSXMLElement.m:
	Use a new class for namespaces ... just a placeholder/skeleton so far.
	Change other classes to know the correct type of their 'node' pointer.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLNode.m: Avoid crash when trying to get the parent of a
	namespace ... namespaces don't have parents and in fact have a
	completely different in-memory layout to other 'node' types.

2012-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSURLProtocol.m:
	* Headers/Foundation/NSURLProtocol.h:
	Tweak handling of debug settings to consistently write debug output
	using NSLog.

2012-03-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-copyWithZone:): Don't set object value of
	copy if it is nil.
	* Source/NSXMLNode.m (+_objectForNode:): Use correct sub class for
	decl nodes.
	* Tests/base/NSXMLNode/basic.m: More tests.

2012-03-08  Fred Kiefer <FredKiefer@gmx.de>
